<resources>
    <string name="app_name"> IZN</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_data">Data</string>
    <string name="title_survey">Survey</string>
    <string name="title_logout">Logout</string>

    <string-array name="items_301">
        <item>1. Baznas Pusat</item>
        <item>2. Baznas Provinsi</item>
        <item>3. Baznas Kab/Kota</item>
        <item>4. LAZ Nasional</item>
        <item>5. LAZ Provinsi</item>
        <item>6. LAZ Kab/Kota</item>
    </string-array>

    <string-array name="items_bulan">
        <item>Januari</item>
        <item>Februari</item>
        <item>Maret</item>
        <item>April</item>
        <item>Mei</item>
        <item>Juni</item>
        <item>Juli</item>
        <item>Agustus</item>
        <item>September</item>
        <item>Oktober</item>
        <item>November</item>
        <item>Desember</item>
    </string-array>

    <string-array name="items_203">
        <item>1. Kepala keluarga</item>
        <item>2. Istri/suami</item>
        <item>3. Anak</item>
        <item>4. Menantu</item>
        <item>5. Cucu</item>
        <item>6. Orang tua/mertua</item>
        <item>7. Pembantu ruta</item>
        <item>8. Lainnya</item>

    </string-array>
    <string-array name="items_204">
        <item>1. Laki-laki</item>
        <item>2. Perempuan</item>

    </string-array>
    <string-array name="items_per">
        <item>per hari</item>
        <item>per bulan</item>
        <item>per tahun</item>

    </string-array>

    <string-array name="items_207">
        <item>1. Belum kawin</item>
        <item>2. Kawin/nikah</item>
        <item>3. Cerai hidup</item>
        <item>4. Cerai mati</item>
    </string-array>

    <string-array name="items_208">
        <item>00. Belum Bersekolah</item>
        <item>01. Tidak Bersekolah</item>
        <item>02. SD/SDLB</item>
        <item>03. Paket A</item>
        <item>04. Madrasah Ibtidaiyah</item>
        <item>05. SMP/SMPLB</item>
        <item>06. Paket B</item>
        <item>07. Madrasah Tsanawiyah</item>
        <item>08. SMA/SMK/SMALB</item>
        <item>09. Paket C</item>
        <item>10. Madrasah Aliyah</item>
        <item>11. Perguruan tinggi (D1/D2/D3/S1)</item>
    </string-array>

    <string-array name="items_209">
        <item>00. Tidak/Belum menyelesaikan kelas/tingkat 1</item>
        <item>01. Tingkat 1</item>
        <item>02. Tingkat 2</item>
        <item>03. Tingkat 3</item>
        <item>04. Tingkat 4</item>
        <item>05. Tingkat 5</item>
        <item>06. Tingkat 6</item>
        <item>07. Lulus/Tamat</item>
    </string-array>

    <string-array name="items_304">
        <item>01. Karyawan</item>
        <item>02. Petani</item>
        <item>03. Pedagang</item>
        <item>04. Buruh</item>
        <item>05. Nelayan</item>
        <item>06. Lainnya</item>
    </string-array>

    <string-array name="items_likert_sholat">
        <item>0. Pilih</item>
        <item>1. Melarang orang lain shalat</item>
        <item>2. Menolak konsep shalat</item>
        <item>3. Melaksanakan shalat wajib tidak rutin</item>
        <item>4. Melaksanakan shalat rutin wajib tapi tidak selalu berjamaah</item>
        <item>5. Melaksanakan shalat wajib rutin berjamaah dan melakukan shalat sunnah</item>
    </string-array>

    <string-array name="items_likert_puasa">
        <item>0. Pilih</item>
        <item>1. Melarang orang lain berpuasa</item>
        <item>2. Menolak konsep puasa</item>
        <item>3. Melaksanakan puasa wajib
            tidak penuh</item>

        <item>4. Melaksanakan puasa wajib secara penuh</item>
        <item>5. Melaksanakan puasa wajib penuh dan puasa sunah</item>
    </string-array>


    <string-array name="items_likert_zakat">
        <item>0. Pilih</item>
        <item>1. Melarang orang lain berzakat dan infak</item>
        <item>2. Menolak zakat dan infak</item>
        <item>3. Tidak pernah berinfak walau sekali dalam setahun</item>
        <item>4. Membayar zakat fitrah dan zakat harta (mal)</item>
        <item>5. Membayar zakat fitrah, zakat harta, dan infak/sedekah</item>
    </string-array>

    <string-array name="items_likert_lingkungan">
        <item>0. Pilih</item>
        <item>1. Melarang anggota keluarga ibadah</item>
        <item>2. Menolak pelaksanaan ibadah</item>
        <item>3. Menganggap ibadah sebagai urusan pribadi anggota keluarga</item>
        <item>4. Mendukung ibadah anggota keluarga</item>
        <item>5. Membangun suasana keluarga yang mendukung ibadah secara bersama-sama</item>
    </string-array>

    <string-array name="items_likert_kebijakan">
        <item>0. Pilih</item>
        <item>1. Melarang ibadah untuk setiap keluarga</item>
        <item>2. Menolak pelaksanaan ibadah</item>
        <item>3. Menganggap ibadah sebagai urusan pribadi masyarakat</item>
        <item>4. Mendukung ibadah</item>
        <item>5. Menciptakan lingkungan yang kondusif untuk ibadah</item>
    </string-array>


    <string-array name="items_modul1_601">
        <item>1. Ayah</item>
        <item>2. Ibu</item>
        <item>3. Anak</item>
        <item>1,2. Ayah, Ibu</item>
        <item>1,3. Ayah, Anak</item>
        <item>2,3. Ibu, Anak</item>
        <item>1,2,3. Ayah, Ibu, Anak</item>
    </string-array>
    <string-array name="items_modul1_602">
        <item>1. BAZNAS Pusat</item>
        <item>2. BAZNAS daerah</item>
        <item>3. LAZ</item>
    </string-array>
    <string-array name="items_modul1_603">
        <item>01. Zakat Community Development (ZCD)</item>
        <item>02. BAZNAS Micro Finance (BMFi)</item>
        <item>03. Lembaga Pemberdayaan Ekonomi Mustahik (LPEM)</item>
        <item>04. Layanan Aktif BAZNAS (LAB)</item>
        <item>05. Lembaga Beasiswa BAZNAS (LBB)</item>
        <item>06. Sekolah Cendikia BAZNAS (SCB)</item>
        <item>07. BAZNAS Tanggap Bencana (BTB)</item>
        <item>08. Mualaf Center BAZNAS (MCB)</item>
        <item>09. Rumah Sehat BAZNAS (RSB)</item>
        <!--<item>10. Layanan Publik</item>-->
        <item>10. Lembaga Pemberdayaan Peternak Mustahik (LPPM)</item>
        <item>11. Layanan Publik</item>
        <item>12. Lainnya</item>
    </string-array>
    <string-array name="items_modul1_607">
        <item>1. Bantuan Konsumtif</item>
        <item>2. Bantuan Produktif</item>
        <item>3. Keduanya</item>
    </string-array>
    <string name="title_activity_tes">Tes</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="done">done</string>
    <string name="error_message_empty">Tidak boleh kosong</string>
    <string name="btn_save">SAVE</string>

    <string name="status_pending">Tertunda</string>
    <string name="status_sent">Terkirim</string>
    <string name="register_phone">No Telp</string>
    <string name="register_repeat_password">Ulangi password</string>
    <string name="register_password">Password</string>
    <string name="register_back_login">Kembali ke login</string>
    <string name="register">Daftar</string>
    <string name="register_nama">Nama</string>
    <string name="register_email">Email</string>
    <string name="register_provinsi">Provinsi</string>
    <string name="register_nama_lembaga">Nama Lembaga</string>
    <string name="modul_add_action_menu_item">Tambah Data</string>
    <string name="toolbar_action_info">ShowCaseInfo</string>

</resources>